--- a/hhp.cabal
+++ b/hhp.cabal
@@ -168,6 +168,7 @@ Test-Suite spec
                       , syb
                       , hlint >= 1.7.1
                       , ghc-boot
+  Build-Tool-Depends:   hspec-discover:hspec-discover
 
 Source-Repository head
   Type:                 git
